--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -48,7 +48,7 @@ import Searchbar from "./Searchbar.astro";
     }
 
     a:hover{
-        color: var(--altgeld-orange);
+        color: var(--altgeld-orange) !important;
     }
 
     .campus .row {
@@ -407,7 +407,7 @@ import Searchbar from "./Searchbar.astro";
                 </div>
             </li>
             <li class="dropdown mega nav-item ">
-                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="sol">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="thermodynamics">
                     <span>Thermodynamics</a></span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-solids"> 
