--- a/src/pages/thermodynamics/thermodynamic_systems.astro
+++ b/src/pages/thermodynamics/thermodynamic_systems.astro
@@ -201,7 +201,7 @@ import RedText from "../../components/RedText.astro"
 
 <SubSection title="Mass and Mass Flow" id="mass_and_mass_flow">
 <p>As matter flows in and out of a thermodynamic system, the amount of mass in the system at time <InlineEquation equation="t" /> by is defined by <InlineEquation equation="m(t)" />, then </p>
-<DisplayEquation equation='\\frac{dm}{dt}(t) = \\sum_{in}\\dot{m}_{in}(t) - \\sum_{out}\\dot{m}_{out}(t),' title="Mass-balance differential equation" background="True"/>
+<DisplayEquation equation='\\frac{dm}{dt}(t) = \\sum_{in}\\dot{m}_{in}(t) - \\sum_{out}\\dot{m}_{out}(t),' title="Mass-balance differential equation" background="True" id="MassBalanceDiff"/>
 <p>refers to 'the rate of change of the mass of the system.' The sums on the right add up all mass flows into and out of the system, respectively. If this quantity is positive, then the mass of the system is increasing. If it is negative, the mass of the system must be decreasing, as long as there is still mass left inside the system. </p>
 <p>
 If these flow rates are known functions of time, then this equation implies that</p>
