--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -30,7 +30,7 @@ Different supports and different connections have different types of reaction fo
 
 A roller support only constrains movement in the y-direction, and thus only has one reaction force (oriented in the y-direction). 
 
-<Image src='/sta/reaction_forces/SingleForceRxns.PNG' width='5'>Constraints that produce one unknown reaction force.</Image>
+<Image src='/sta/reaction_forces/SingleForceRxns.png' width='5'>Constraints that produce one unknown reaction force.</Image>
 
 <Image src='/sta/reaction_forces/MultiForceRxns.PNG' width='5'>Constraints that produce multiple unknown reaction forces or moments.</Image>
 
